// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Wrapper Default 1`] = `
.c8 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #3498db;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c8 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c8:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c8 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c8:not(:disabled):hover,
.c8:not(:disabled).hovered,
.c8:not(:disabled):active,
.c8:not(:disabled).active {
  background-color: #2980b9;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c8:not(:disabled):hover .icon,
.c8:not(:disabled).hovered .icon,
.c8:not(:disabled):active .icon,
.c8:not(:disabled).active .icon,
.c8:not(:disabled):focus .icon,
.c8:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c8:not(:disabled).active,
.c8:not(:disabled):active {
  box-shadow: none;
}

.c8:focus,
.c8.focused {
  outline: none;
}

.c8.focus-visible,
.c8.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c5 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c5 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > .input > input,
.select__search .c5 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c5 > .input > textarea {
  padding: 16px;
}

.c5 > .input input,
.c5 > .input textarea,
.c5 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c5 > .input > input,
.c5 > .input > textarea,
.select__search .c5 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c5 > .input > input::-webkit-input-placeholder,
.c5 > .input > textarea::-webkit-input-placeholder,
.select__search .c5 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::-moz-placeholder,
.c5 > .input > textarea::-moz-placeholder,
.select__search .c5 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input:-ms-input-placeholder,
.c5 > .input > textarea:-ms-input-placeholder,
.select__search .c5 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::placeholder,
.c5 > .input > textarea::placeholder,
.select__search .c5 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input[type="search"],
.c5 > .input > textarea[type="search"],
.select__search .c5 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c5 > .input > input[type="search"]::-webkit-search-cancel-button,
.c5 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c5 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c5 > .input > input[type="search"]::-ms-clear,
.c5 > .input > textarea[type="search"]::-ms-clear,
.select__search .c5 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c5 > .input > input[role="combobox"],
.c5 > .input > textarea[role="combobox"],
.select__search .c5 > .input input[role="combobox"] {
  cursor: pointer;
}

.c5 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c5 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c5 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c5 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5 .input.dropdown {
  cursor: pointer;
}

.c5 input[type="number"] {
  -moz-appearance: textfield;
}

.c5 input[type="number"]::-webkit-inner-spin-button,
.c5 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c5 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c5 .prefix,
.c5 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c5 .label {
  margin-bottom: 8px;
}

.c4 {
  position: relative;
}

.c4 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c7 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    />
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          First Name
        </label>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          Last Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="c7 footer"
  >
    <button
      className="c8 save   "
      id="form-wrapper-save"
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With id 1`] = `
.c8 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #3498db;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c8 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c8:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c8 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c8:not(:disabled):hover,
.c8:not(:disabled).hovered,
.c8:not(:disabled):active,
.c8:not(:disabled).active {
  background-color: #2980b9;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c8:not(:disabled):hover .icon,
.c8:not(:disabled).hovered .icon,
.c8:not(:disabled):active .icon,
.c8:not(:disabled).active .icon,
.c8:not(:disabled):focus .icon,
.c8:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c8:not(:disabled).active,
.c8:not(:disabled):active {
  box-shadow: none;
}

.c8:focus,
.c8.focused {
  outline: none;
}

.c8.focus-visible,
.c8.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c5 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c5 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > .input > input,
.select__search .c5 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c5 > .input > textarea {
  padding: 16px;
}

.c5 > .input input,
.c5 > .input textarea,
.c5 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c5 > .input > input,
.c5 > .input > textarea,
.select__search .c5 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c5 > .input > input::-webkit-input-placeholder,
.c5 > .input > textarea::-webkit-input-placeholder,
.select__search .c5 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::-moz-placeholder,
.c5 > .input > textarea::-moz-placeholder,
.select__search .c5 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input:-ms-input-placeholder,
.c5 > .input > textarea:-ms-input-placeholder,
.select__search .c5 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::placeholder,
.c5 > .input > textarea::placeholder,
.select__search .c5 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input[type="search"],
.c5 > .input > textarea[type="search"],
.select__search .c5 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c5 > .input > input[type="search"]::-webkit-search-cancel-button,
.c5 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c5 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c5 > .input > input[type="search"]::-ms-clear,
.c5 > .input > textarea[type="search"]::-ms-clear,
.select__search .c5 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c5 > .input > input[role="combobox"],
.c5 > .input > textarea[role="combobox"],
.select__search .c5 > .input input[role="combobox"] {
  cursor: pointer;
}

.c5 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c5 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c5 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c5 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5 .input.dropdown {
  cursor: pointer;
}

.c5 input[type="number"] {
  -moz-appearance: textfield;
}

.c5 input[type="number"]::-webkit-inner-spin-button,
.c5 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c5 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c5 .prefix,
.c5 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c5 .label {
  margin-bottom: 8px;
}

.c4 {
  position: relative;
}

.c4 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c7 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="an-id"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    />
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="an-id-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          First Name
        </label>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          Last Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="c7 footer"
  >
    <button
      className="c8 save   "
      id="an-id-save"
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With saveButtonProps customization 1`] = `
.c8 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 32px;
  min-width: 32px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c8 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c8:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c8 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c8:not(:disabled):hover,
.c8:not(:disabled).hovered,
.c8:not(:disabled):active,
.c8:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c8:not(:disabled):hover .icon,
.c8:not(:disabled).hovered .icon,
.c8:not(:disabled):active .icon,
.c8:not(:disabled).active .icon,
.c8:not(:disabled):focus .icon,
.c8:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c8:not(:disabled).active,
.c8:not(:disabled):active {
  box-shadow: none;
}

.c8:focus,
.c8.focused {
  outline: none;
}

.c8.focus-visible,
.c8.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c5 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c5 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > .input > input,
.select__search .c5 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c5 > .input > textarea {
  padding: 16px;
}

.c5 > .input input,
.c5 > .input textarea,
.c5 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c5 > .input > input,
.c5 > .input > textarea,
.select__search .c5 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c5 > .input > input::-webkit-input-placeholder,
.c5 > .input > textarea::-webkit-input-placeholder,
.select__search .c5 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::-moz-placeholder,
.c5 > .input > textarea::-moz-placeholder,
.select__search .c5 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input:-ms-input-placeholder,
.c5 > .input > textarea:-ms-input-placeholder,
.select__search .c5 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::placeholder,
.c5 > .input > textarea::placeholder,
.select__search .c5 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input[type="search"],
.c5 > .input > textarea[type="search"],
.select__search .c5 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c5 > .input > input[type="search"]::-webkit-search-cancel-button,
.c5 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c5 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c5 > .input > input[type="search"]::-ms-clear,
.c5 > .input > textarea[type="search"]::-ms-clear,
.select__search .c5 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c5 > .input > input[role="combobox"],
.c5 > .input > textarea[role="combobox"],
.select__search .c5 > .input input[role="combobox"] {
  cursor: pointer;
}

.c5 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c5 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c5 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c5 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5 .input.dropdown {
  cursor: pointer;
}

.c5 input[type="number"] {
  -moz-appearance: textfield;
}

.c5 input[type="number"]::-webkit-inner-spin-button,
.c5 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c5 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c5 .prefix,
.c5 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c5 .label {
  margin-bottom: 8px;
}

.c4 {
  position: relative;
}

.c4 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c7 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          First Name
        </label>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          Last Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="c7 footer"
  >
    <button
      className="c8 save   "
      id="form-wrapper-save"
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With title 1`] = `
.c8 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #3498db;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c8 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c8:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c8 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c8:not(:disabled):hover,
.c8:not(:disabled).hovered,
.c8:not(:disabled):active,
.c8:not(:disabled).active {
  background-color: #2980b9;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c8:not(:disabled):hover .icon,
.c8:not(:disabled).hovered .icon,
.c8:not(:disabled):active .icon,
.c8:not(:disabled).active .icon,
.c8:not(:disabled):focus .icon,
.c8:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c8:not(:disabled).active,
.c8:not(:disabled):active {
  box-shadow: none;
}

.c8:focus,
.c8.focused {
  outline: none;
}

.c8.focus-visible,
.c8.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c5 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c5 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > .input > input,
.select__search .c5 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c5 > .input > textarea {
  padding: 16px;
}

.c5 > .input input,
.c5 > .input textarea,
.c5 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c5 > .input > input,
.c5 > .input > textarea,
.select__search .c5 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c5 > .input > input::-webkit-input-placeholder,
.c5 > .input > textarea::-webkit-input-placeholder,
.select__search .c5 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::-moz-placeholder,
.c5 > .input > textarea::-moz-placeholder,
.select__search .c5 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input:-ms-input-placeholder,
.c5 > .input > textarea:-ms-input-placeholder,
.select__search .c5 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::placeholder,
.c5 > .input > textarea::placeholder,
.select__search .c5 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input[type="search"],
.c5 > .input > textarea[type="search"],
.select__search .c5 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c5 > .input > input[type="search"]::-webkit-search-cancel-button,
.c5 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c5 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c5 > .input > input[type="search"]::-ms-clear,
.c5 > .input > textarea[type="search"]::-ms-clear,
.select__search .c5 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c5 > .input > input[role="combobox"],
.c5 > .input > textarea[role="combobox"],
.select__search .c5 > .input input[role="combobox"] {
  cursor: pointer;
}

.c5 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c5 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c5 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c5 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5 .input.dropdown {
  cursor: pointer;
}

.c5 input[type="number"] {
  -moz-appearance: textfield;
}

.c5 input[type="number"]::-webkit-inner-spin-button,
.c5 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c5 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c5 .prefix,
.c5 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c5 .label {
  margin-bottom: 8px;
}

.c4 {
  position: relative;
}

.c4 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c7 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          First Name
        </label>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          Last Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="c7 footer"
  >
    <button
      className="c8 save   "
      id="form-wrapper-save"
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper extended style 1`] = `
.c9 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #3498db;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c9 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c9:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c9 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c9:not(:disabled):hover,
.c9:not(:disabled).hovered,
.c9:not(:disabled):active,
.c9:not(:disabled).active {
  background-color: #2980b9;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c9:not(:disabled):hover .icon,
.c9:not(:disabled).hovered .icon,
.c9:not(:disabled):active .icon,
.c9:not(:disabled).active .icon,
.c9:not(:disabled):focus .icon,
.c9:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c9:not(:disabled).active,
.c9:not(:disabled):active {
  box-shadow: none;
}

.c9:focus,
.c9.focused {
  outline: none;
}

.c9.focus-visible,
.c9.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c3 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c3 span.margin-left {
  margin-left: 4px;
}

.c3 span.margin-right {
  margin-right: 4px;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > a {
  color: inherit;
}

.c3:hover {
  color: #3498db;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input input,
.c6 > .input textarea,
.c6 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c6 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c6 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c6 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c6 .label {
  margin-bottom: 8px;
}

.c5 {
  position: relative;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c1 .title {
  margin-left: 16px;
}

.c1 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c8 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c4 {
  padding: 16px 16px 0 16px;
}

.c0 {
  background: gainsboro;
}

.c0 .header {
  border: solid 4px maroon;
}

.c0 .header .title {
  font-family: fantasy;
}

.c0 .header .cancel {
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

.c0 .body {
  margin: 40px;
}

.c0 .footer {
  border: solid 4px mediumslateblue;
}

.c0 .footer .save {
  opacity: .3;
}

<div
  className="c0"
  id="form-wrapper"
>
  <div
    className="c1 header"
  >
    <div
      className="c2 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c3 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c4 body"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c7 label"
        >
          First Name
        </label>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c7 label"
        >
          Last Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="c8 footer"
  >
    <button
      className="c9 save   "
      id="form-wrapper-save"
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper extra content 1`] = `
.c8 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #3498db;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c8 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c8:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c8 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c8:not(:disabled):hover,
.c8:not(:disabled).hovered,
.c8:not(:disabled):active,
.c8:not(:disabled).active {
  background-color: #2980b9;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c8:not(:disabled):hover .icon,
.c8:not(:disabled).hovered .icon,
.c8:not(:disabled):active .icon,
.c8:not(:disabled).active .icon,
.c8:not(:disabled):focus .icon,
.c8:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c8:not(:disabled).active,
.c8:not(:disabled):active {
  box-shadow: none;
}

.c8:focus,
.c8.focused {
  outline: none;
}

.c8.focus-visible,
.c8.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c5 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c5 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > .input > input,
.select__search .c5 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c5 > .input > textarea {
  padding: 16px;
}

.c5 > .input input,
.c5 > .input textarea,
.c5 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c5 > .input > input,
.c5 > .input > textarea,
.select__search .c5 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c5 > .input > input::-webkit-input-placeholder,
.c5 > .input > textarea::-webkit-input-placeholder,
.select__search .c5 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::-moz-placeholder,
.c5 > .input > textarea::-moz-placeholder,
.select__search .c5 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input:-ms-input-placeholder,
.c5 > .input > textarea:-ms-input-placeholder,
.select__search .c5 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::placeholder,
.c5 > .input > textarea::placeholder,
.select__search .c5 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input[type="search"],
.c5 > .input > textarea[type="search"],
.select__search .c5 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c5 > .input > input[type="search"]::-webkit-search-cancel-button,
.c5 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c5 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c5 > .input > input[type="search"]::-ms-clear,
.c5 > .input > textarea[type="search"]::-ms-clear,
.select__search .c5 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c5 > .input > input[role="combobox"],
.c5 > .input > textarea[role="combobox"],
.select__search .c5 > .input input[role="combobox"] {
  cursor: pointer;
}

.c5 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c5 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c5 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c5 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5 .input.dropdown {
  cursor: pointer;
}

.c5 input[type="number"] {
  -moz-appearance: textfield;
}

.c5 input[type="number"]::-webkit-inner-spin-button,
.c5 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c5 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c5 .prefix,
.c5 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c5 .label {
  margin-bottom: 8px;
}

.c4 {
  position: relative;
}

.c4 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c7 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          First Name
        </label>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          Last Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="c7 footer"
  >
    <button
      className="c8 save   "
      id="form-wrapper-save"
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
  <div>
    Extra content renders after save button
  </div>
</div>
`;

exports[`Storyshots Form Wrapper in compact container 1`] = `
.c8 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #3498db;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c8 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c8:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c8 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c8:not(:disabled):hover,
.c8:not(:disabled).hovered,
.c8:not(:disabled):active,
.c8:not(:disabled).active {
  background-color: #2980b9;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c8:not(:disabled):hover .icon,
.c8:not(:disabled).hovered .icon,
.c8:not(:disabled):active .icon,
.c8:not(:disabled).active .icon,
.c8:not(:disabled):focus .icon,
.c8:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c8:not(:disabled).active,
.c8:not(:disabled):active {
  box-shadow: none;
}

.c8:focus,
.c8.focused {
  outline: none;
}

.c8.focus-visible,
.c8.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c5 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c5 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > .input > input,
.select__search .c5 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c5 > .input > textarea {
  padding: 16px;
}

.c5 > .input input,
.c5 > .input textarea,
.c5 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c5 > .input > input,
.c5 > .input > textarea,
.select__search .c5 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c5 > .input > input::-webkit-input-placeholder,
.c5 > .input > textarea::-webkit-input-placeholder,
.select__search .c5 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::-moz-placeholder,
.c5 > .input > textarea::-moz-placeholder,
.select__search .c5 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input:-ms-input-placeholder,
.c5 > .input > textarea:-ms-input-placeholder,
.select__search .c5 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::placeholder,
.c5 > .input > textarea::placeholder,
.select__search .c5 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input[type="search"],
.c5 > .input > textarea[type="search"],
.select__search .c5 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c5 > .input > input[type="search"]::-webkit-search-cancel-button,
.c5 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c5 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c5 > .input > input[type="search"]::-ms-clear,
.c5 > .input > textarea[type="search"]::-ms-clear,
.select__search .c5 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c5 > .input > input[role="combobox"],
.c5 > .input > textarea[role="combobox"],
.select__search .c5 > .input input[role="combobox"] {
  cursor: pointer;
}

.c5 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c5 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c5 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c5 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5 .input.dropdown {
  cursor: pointer;
}

.c5 input[type="number"] {
  -moz-appearance: textfield;
}

.c5 input[type="number"]::-webkit-inner-spin-button,
.c5 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c5 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c5 .prefix,
.c5 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c5 .label {
  margin-bottom: 8px;
}

.c4 {
  position: relative;
}

.c4 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c7 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    id="form-wrapper"
  >
    <div
      className="c0 header"
    >
      <div
        className="c1 title"
        fontWeight="title"
        size={16}
        type="#2f313a"
      >
        Long Title That Should Not Touch The Cancel Button
      </div>
      <div
        className="c2 cancel"
        disabled={false}
        fontWeight="600"
        size={16}
        type="#59636f"
      >
        <span
          id="form-wrapper-cancel"
          onClick={[Function]}
        >
          Cancel
        </span>
      </div>
    </div>
    <div
      className="c3 body"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
          onClick={[Function]}
          type="text"
        >
          <div
            className="input "
          >
            <input
              className="wrapped "
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
            />
          </div>
          <label
            className="c6 label"
          >
            First Name
          </label>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
          onClick={[Function]}
          type="text"
        >
          <div
            className="input "
          >
            <input
              className="wrapped "
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
            />
          </div>
          <label
            className="c6 label"
          >
            Last Name
          </label>
        </div>
      </div>
    </div>
    <div
      className="c7 footer"
    >
      <button
        className="c8 save   "
        id="form-wrapper-save"
        onClick={[Function]}
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper loading 1`] = `
.c9 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c9 .farmblocks-icon {
  display: block;
}

.c8 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 100%;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #3498db;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c8 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c8:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c8 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c8:not(:disabled):hover,
.c8:not(:disabled).hovered,
.c8:not(:disabled):active,
.c8:not(:disabled).active {
  background-color: #2980b9;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c8:not(:disabled):hover .icon,
.c8:not(:disabled).hovered .icon,
.c8:not(:disabled):active .icon,
.c8:not(:disabled).active .icon,
.c8:not(:disabled):focus .icon,
.c8:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c8:not(:disabled).active,
.c8:not(:disabled):active {
  box-shadow: none;
}

.c8:focus,
.c8.focused {
  outline: none;
}

.c8.focus-visible,
.c8.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c10 {
  -webkit-animation: 2s linear 0s infinite normal eoUyJr;
  animation: 2s linear 0s infinite normal eoUyJr;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 span.margin-left {
  margin-left: 4px;
}

.c2 span.margin-right {
  margin-right: 4px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: #2f313a;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 24px;
  font-family: Lato,sans-serif;
  font-size: 16px;
}

.c5 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c5 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > .input > input,
.select__search .c5 > .input input {
  padding: 8px 16px;
  line-height: 22px;
}

.c5 > .input > textarea {
  padding: 16px;
}

.c5 > .input input,
.c5 > .input textarea,
.c5 > .input select {
  font-family: inherit;
  font-size: inherit;
}

.c5 > .input > input,
.c5 > .input > textarea,
.select__search .c5 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  color: #2f313a;
  background: none;
}

.c5 > .input > input::-webkit-input-placeholder,
.c5 > .input > textarea::-webkit-input-placeholder,
.select__search .c5 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::-moz-placeholder,
.c5 > .input > textarea::-moz-placeholder,
.select__search .c5 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input:-ms-input-placeholder,
.c5 > .input > textarea:-ms-input-placeholder,
.select__search .c5 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input::placeholder,
.c5 > .input > textarea::placeholder,
.select__search .c5 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c5 > .input > input[type="search"],
.c5 > .input > textarea[type="search"],
.select__search .c5 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c5 > .input > input[type="search"]::-webkit-search-cancel-button,
.c5 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c5 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c5 > .input > input[type="search"]::-ms-clear,
.c5 > .input > textarea[type="search"]::-ms-clear,
.select__search .c5 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c5 > .input > input[role="combobox"],
.c5 > .input > textarea[role="combobox"],
.select__search .c5 > .input input[role="combobox"] {
  cursor: pointer;
}

.c5 > .input > .icon {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .icon.left {
  margin-left: 8px;
  margin-right: -8px;
}

.c5 > .input > .icon.right {
  margin-right: 8px;
  margin-left: -8px;
}

.c5 > .input > .clear {
  color: rgba(0,0,0,0.16);
}

.c5 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c5 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5 .input.dropdown {
  cursor: pointer;
}

.c5 input[type="number"] {
  -moz-appearance: textfield;
}

.c5 input[type="number"]::-webkit-inner-spin-button,
.c5 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5 .prefix {
  margin-left: 16px;
  margin-right: -8px;
}

.c5 .suffix {
  margin-right: 16px;
  margin-left: -8px;
}

.c5 .prefix,
.c5 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
}

.c5 .label {
  margin-bottom: 8px;
}

.c4 {
  position: relative;
}

.c4 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c7 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="c0 header"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="c2 cancel"
      disabled={false}
      fontWeight="600"
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="c3 body"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          First Name
        </label>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
        type="text"
      >
        <div
          className="input "
        >
          <input
            className="wrapped "
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
          />
        </div>
        <label
          className="c6 label"
        >
          Last Name
        </label>
      </div>
    </div>
  </div>
  <div
    className="c7 footer"
  >
    <button
      className="c8 save   "
      disabled={true}
      id="form-wrapper-save"
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-8px)",
          }
        }
      >
        <span
          className="c9"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon c10"
            data-testid="loading"
            height={22}
            viewBox="4 4 32 32"
            width={22}
          >
            <path
              d="M19 8a1 1 0 012 0v6a1 1 0 01-2 0V8zm2 24a1 1 0 01-2 0v-5a1 1 0 012 0v5zM8 21a1 1 0 010-2h6a1 1 0 010 2H8zm18-.5a.5.5 0 110-1h6a.5.5 0 110 1h-6zm3.197 7.283a1 1 0 01-1.414 1.414l-3.86-3.86a1 1 0 011.414-1.414l3.86 3.86zm-12.87-12.87a1 1 0 01-1.414 1.414l-4.11-4.11a1 1 0 011.414-1.414l4.11 4.11zm-1.664 9.01a1 1 0 011.414 1.414l-3.86 3.86a1 1 0 01-1.414-1.414l3.86-3.86zm13.12-13.12a1 1 0 011.414 1.414l-4.11 4.11a1 1 0 01-1.414-1.414l4.11-4.11z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <span>
        Save
      </span>
    </button>
  </div>
</div>
`;
